# fs-scout

./: .gitignore  Cargo.toml
fs-scout-macros/: Cargo.toml
fs-scout-macros/src/: lib.rs
src/: compiletime.rs  lib.rs  runtime.rs
tests/: specs.rs
